# FIXME: Centralise this
SET_PROPERTY(DIRECTORY PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H)

SET(audiosource_SOURCES
  audiosource.cc
)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${GLIBMM_INCLUDE_DIRS}
  ${GTK_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
)

ADD_EXECUTABLE(audiosource ${audiosource_SOURCES})

TARGET_LINK_LIBRARIES(audiosource
  ${GLIBMM_LIBRARIES}
  ${GTK_LIBRARIES}
  ${DBUS_LIBRARIES}
)
