ADD_DEFINITIONS(${COMMON_DEFINITIONS})

SET(youki_SOURCES
  youki.cc
)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${GLIBMM_INCLUDE_DIRS}
  ${GTK_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
)

ADD_EXECUTABLE(youki ${youki_SOURCES})

TARGET_LINK_LIBRARIES(youki
  ${GLIBMM_LIBRARIES}
  ${GTK_LIBRARIES}
  ${DBUS_LIBRARIES}
)
