# FIXME: Centralise this
SET_PROPERTY(DIRECTORY PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H)

SET(mpx_sentinel_SOURCES
  mpx-sentinel.cc
)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include
  ${GLIB_INCLUDE_DIRS}
  ${GTK_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
  ${SOUP_INCLUDE_DIRS}
)

ADD_EXECUTABLE(mpx-sentinel ${mpx_sentinel_SOURCES})

TARGET_LINK_LIBRARIES(mpx-sentinel
  ${GLIB_LIBRARIES}
  ${GTK_LIBRARIES}
  ${DBUS_LIBRARIES}
  ${SOUP_LIBRARIES}
)
