libexec_PROGRAMS = youki-sentinel-bin 

youki_sentinel_bin_LDADD =	    \
	$(GLIB_LIBS)		        \
	$(GTK_LIBS)			        \
	$(DBUS_LIBS)		        \
	$(SOUP_LIBS)

youki_sentinel_bin_CXXFLAGS =	\
	$(GLIB_CFLAGS)		        \
	$(GTK_CFLAGS)		        \
	$(DBUS_CFLAGS)		        \
	$(SOUP_CFLAGS)													

youki_sentinel_bin_SOURCES =	\
	youki-sentinel.cc
